[package]
name = "jdoc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jdoc"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.5.23", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
anyhow = "1"

[dev-dependencies]
serde_json = "1"
